syntax = "proto3";

package meta;

import "google/api/annotations.proto";

service Meta {
    rpc Create (CreateMetaRequest) returns (CreateMetaReply) {
        option (google.api.http) = {
            post: "/meta"
            body: "*"
        };
    };
    rpc Get (GetMetaRequest) returns (GetMetaReply) {
        option (google.api.http) = {
            get: "/meta/{id}"
        };
    };
    rpc List (ListMetaRequest) returns (ListMetaReply) {
        option (google.api.http) = {
            get: "/meta"
        };
    };
    rpc Update (UpdateMetaRequest) returns (UpdateMetaReply) {
        option (google.api.http) = {
            patch: "/meta/{id}"
            body: "*"
        };
    };
    rpc Delete (DeleteMetaRequest) returns (DeleteMetaReply) {
        option (google.api.http) = {
            delete: "/meta/{id}"
        };
    };
}

message CreateMetaRequest {
    string name = 1;
}

message CreateMetaReply {
    string id = 1;
    string name = 2;
}

message GetMetaRequest {
    string id = 1;
}

message GetMetaReply {
    string id = 1;
    string name = 2;
}

message ListMetaRequest {
    int32 limit = 1;
    int32 offset = 2;
}

message ListMetaReply {
    repeated MetaModel metas = 1;
    ListMetadata metadata = 2;
}

message UpdateMetaRequest {
    string id = 1;
    string name = 2;
}

message UpdateMetaReply {
    string id = 1;
    string name = 2;
}

message DeleteMetaRequest {
    string id = 1;
}

message DeleteMetaReply {
}

message MetaModel {
    string id = 1;
    string name = 2;
}

message ListMetadata {
    int32 count = 1;
    int32 limit = 2;
    int32 offset = 3;
    int64 total = 4;
}

