syntax = "proto3";

package shared;

message EmptyMsg {
}

message GetRequest {
    string id = 1;
}

message ListRequest {
    int32 limit = 1;
    int32 offset = 2;
}

message DeleteRequest {
    string id = 1;
}

message ListMetadata {
    int32 count = 1;
    int32 limit = 2;
    int32 offset = 3;
    int64 total = 4;
}